--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin-right: 30px;
 }
 
 .small-items-wrapper:first-child {
@@ -61,3 +62,12 @@ body {
     width: 50%;
 
 }
+.add-space{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;;
+    align-items: center;
+    margin-right: 60px;
+}
+
