--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 .content-header {
     background-color: #53545e;
-    width: 600px;
+
     height: 100px;
     margin: auto;
 
@@ -14,7 +14,7 @@
 
 .content, .footer-wrapper {
     background-color: #ffffff;
-    width: 600px;
+
     margin: auto;
 }
 
@@ -24,7 +24,7 @@ body {
 }
 
 .larger-item {
-    width: 100%;
+
     padding: 30px;
     font-family: "MyriadProRegular"
 
@@ -90,7 +90,7 @@ body {
 
 .stay-connected {
     background-color: #f1f1f1;
-    width: 600px;
+    width: 100%;
     height: 75px;
     margin: auto;
 
@@ -152,7 +152,7 @@ a {
 }
 
 .poloska {
-    width: 540px;
+    width: 100%;
     height: 1px;
     background-color: white;
     margin-top: 30px;
@@ -178,7 +178,7 @@ a {
 }
 .poloska2{
     background-color: #eaeaea;
-    width: 540px;
+    width: 100%;
     height: 1px;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -190,4 +190,10 @@ a {
 }
 .colortext{
     color:white;
+}
+
+@media (max-width: 600px) {
+    body{
+        display: none;
+    }
 }
