--- a/main.css
+++ b/main.css
@@ -30,7 +30,6 @@ body {
     padding-right: 30px;
     padding-top: 30px;
     font-family: "MyriadProRegular"
-
 }
 
 .large-text {
@@ -157,11 +156,11 @@ a {
 }
 
 .poloska {
-    width: 100%;
     height: 1px;
     background-color: white;
     margin-top: 30px;
     margin-bottom: 30px;
+    width: calc(100% - 60px);
 }
 
 .hui {
@@ -177,14 +176,14 @@ a {
 .something {
     margin-right: 30px;
     float: right;
-    margin-top: 45px;
+    margin-top: -30px;
     color: #a6a7b0;
     font-family: "MyriadProRegular";
 }
 
 .poloska2 {
     background-color: #eaeaea;
-    width: 90%;
+    width: calc(100% - 60px);
     height: 1px;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -309,10 +308,6 @@ and (orientation: portrait) {
     .small-items-wrapper {
         width: 100%;
     }
-    .logo-head{
-
-    }
-
 }
 
 @media only screen
@@ -335,4 +330,32 @@ and (orientation: landscape) {
         width: 90%;
     }
 
+}
+
+@media only screen
+and (max-device-width: 768px) {
+    .logo-head{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        flex-direction: initial;
+
+    }
+    .something{
+        width: 100%;
+        text-align: center;
+    }
+
+    .content-header {
+        background-color: #53545e;
+        height: 100px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .fullscreen-image{
+        width: 100%;
+    }
 }
