--- a/main.css
+++ b/main.css
@@ -160,7 +160,7 @@ a {
     background-color: white;
     margin-top: 30px;
     margin-bottom: 30px;
-    width: calc(100% - 60px);
+    width: 100%;
 }
 
 .hui {
